@@ -27,6 +27,7 @@ class GUI( xbmcgui.WindowXMLDialog ):
         self.returnval = 0
         self.getControl(73).addLabel(self.account + " " + self.language(370))
         self.getControl(61).setLabel(self.language(61))
+        self.getControl(62).setLabel(self.language(381))
         self.listEnabled = True
         self.control_action = XinBox_Util.setControllerAction()
         self.accountsettings = self.settings.getSettingInListbyname("Accounts",self.account)
@@ -44,6 +45,7 @@ class GUI( xbmcgui.WindowXMLDialog ):
     def disablelist(self):
         self.listEnabled = False
         self.getControl(50).setEnabled(False)
+        self.getControl(62).setEnabled(False)
         self.clearList()
         self.addItem(self.language(371))
         self.setFocusId(61)
@@ -52,6 +54,7 @@ class GUI( xbmcgui.WindowXMLDialog ):
         self.listEnabled = True
         self.clearList()
         self.getControl(50).setEnabled(True)
+        self.getControl(62).setEnabled(True)
                
     def onClick(self, controlID):
         if not self.animating:
@@ -91,6 +94,21 @@ class GUI( xbmcgui.WindowXMLDialog ):
                             self.addcontact(xbmcgui.ListItem(contname,value,"",""))
                         else:self.addcontact(contname)
                         self.settings.saveXMLfromArray()
+            elif ( controlID == 62):
+                self.returnval = self.gencontlist()
+                self.exitme()
+
+    def gencontlist(self):
+        contacts = ""
+        for i, contact in enumerate(self.contacts):
+            curItem = self.getListItem(i)
+            contact = '"' + curItem.getLabel() + '" <' + curItem.getLabel2() + '>'
+            if self.label != False:
+                if contact not in self.label:
+                    contacts += contact + "; "
+            else:
+                contacts += contact + "; "
+        return contacts
                 
     def addcontact(self, item):
         if not self.listEnabled:self.enablelist()
@@ -138,6 +156,10 @@ class GUI( xbmcgui.WindowXMLDialog ):
                     else:self.launchinfo(161,self.language(380))
                 elif focusid == 61:
                     self.launchinfo(160,self.language(61))
+                elif focusid == 62:
+                    if self.label == False:
+                        self.launchinfo(168,self.language(381))
+                    else:self.launchinfo(169,self.language(381))                        
 
     def exitme(self):
         self.animating = True
